# simulation2

./: Cargo.toml  readme.txt
src/: animal.rs  animal_individual.rs  brain.rs  config.rs  eye.rs  flex_brain.rs  food.rs  lib.rs  statistics.rs  world.rs
