[package]
name = "lib-simulation-lifelong"
version = "0.2.0"
authors = [
    "Дмитрий <dv7@bk.ru>"]
edition = "2021"

[dependencies]
nalgebra = { version = "0.33", features = ["rand-no-std"] }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"

candle-nn = { git = "https://github.com/huggingface/candle.git" }

lib-genetic-algorithm = { path = "../genetic-algorithm" }
lib-neural-network = { path = "../neural-network" }


[dev-dependencies]
approx = "0.5"
rand_chacha = "0.3"
test-case = "3"